autapi/tests/snapshots/derive_to_schema__enum-10.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<Enum>>(json!({\n    \"tag\": \"AnOtHeR\", \"BAR_FOO\": 42\n}))"
---
Ok(
    SerdeAdapter(
        Another {
            bar_foo: 42,
        },
    ),
)
