autapi/tests/snapshots/derive_to_schema__enum-12.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<Enum>>(json!(\"hello\"))"
---
Ok(
    SerdeAdapter(
        Untagged(
            "hello",
        ),
    ),
)
