autapi/tests/snapshots/derive_to_schema__enum-13.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<Enum>>(json!(null))"
---
Ok(
    SerdeAdapter(
        Null,
    ),
)
