autapi/tests/snapshots/derive_to_schema__enum-2.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(Enum::Struct(NamedFieldsStruct { thing: true }))"
---
{
  "tag": "struct",
  "thing": true
}
