autapi/tests/snapshots/derive_to_schema__enum-3.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(Enum::NamedFields { foo_bar: 32 })"
---
{
  "tag": "namedFields",
  "FooBar": 32
}
