autapi/tests/snapshots/derive_to_schema__enum-4.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(Enum::Another { bar_foo: 42 })"
---
{
  "tag": "AnOtHeR",
  "BAR_FOO": 42
}
