autapi/tests/snapshots/derive_to_schema__enum-5.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(Enum::Constant)"
---
"constant"
