autapi/tests/snapshots/derive_to_schema__enum-6.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(Enum::Untagged(\"hello\".to_owned()))"
---
"hello"
